@@ -7,9 +7,9 @@ import java.security.NoSuchAlgorithmException;
 import java.util.*;
 import java.util.stream.Collectors;
 
+import be.cytomine.config.security.ApiKeyFilter;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.context.ApplicationContext;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
@@ -21,13 +21,9 @@ import be.cytomine.domain.image.server.Storage;
 import be.cytomine.domain.ontology.Ontology;
 import be.cytomine.domain.project.Project;
 import be.cytomine.domain.project.ProjectRepresentativeUser;
-import be.cytomine.domain.security.SecUser;
 import be.cytomine.domain.security.User;
-import be.cytomine.dto.auth.AuthInformation;
-import be.cytomine.exceptions.AuthenticationException;
 import be.cytomine.exceptions.ForbiddenException;
 import be.cytomine.exceptions.ObjectNotFoundException;
-import be.cytomine.exceptions.WrongArgumentException;
 import be.cytomine.service.CurrentUserService;
 import be.cytomine.service.image.ImageInstanceService;
 import be.cytomine.service.image.server.StorageService;
@@ -36,21 +32,20 @@ import be.cytomine.service.project.ProjectRepresentativeUserService;
 import be.cytomine.service.project.ProjectService;
 import be.cytomine.service.report.ReportService;
 import be.cytomine.service.search.UserSearchExtension;
-import be.cytomine.service.security.SecUserService;
+import be.cytomine.service.security.UserService;
 import be.cytomine.service.security.SecurityACLService;
 import be.cytomine.utils.JsonObject;
-import be.cytomine.utils.SecurityUtils;
-import be.cytomine.utils.StringUtils;
+
 
 import static org.springframework.security.acls.domain.BasePermission.ADMINISTRATION;
 
+@RestController
+@RequestMapping("/api")
 @Slf4j
 @RequiredArgsConstructor
-@RequestMapping("/api")
-@RestController
 public class RestUserController extends RestCytomineController {
 
-    private final SecUserService secUserService;
+    private final UserService userService;
 
     private final ProjectService projectService;
 
@@ -66,8 +61,6 @@ public class RestUserController extends RestCytomineController {
 
     private final StorageService storageService;
 
-    private final ApplicationContext applicationContext;
-
     private final ReportService reportService;
 
     @GetMapping("/project/{id}/admin.json")
@@ -77,7 +70,7 @@ public class RestUserController extends RestCytomineController {
         log.debug("REST request to list admins from project {}", id);
         Project project = projectService.find(id)
                 .orElseThrow(() -> new ObjectNotFoundException("Project", id));
-        return responseSuccess(secUserService.listAdmins(project), isFilterRequired());
+        return responseSuccess(userService.listAdmins(project), isFilterRequired());
     }
 
     @GetMapping("/project/{id}/users/representative.json")
@@ -98,7 +91,7 @@ public class RestUserController extends RestCytomineController {
         log.debug("REST request to list creator from project {}", id);
         Project project = projectService.find(id)
                 .orElseThrow(() -> new ObjectNotFoundException("Project", id));
-        return responseSuccess(List.of(secUserService.findCreator(project).orElseThrow(() -> new ObjectNotFoundException("Project", "CREATOR"))));
+        return responseSuccess(List.of(userService.findCreator(project).orElseThrow(() -> new ObjectNotFoundException("Project", "CREATOR"))));
     }
 
     @GetMapping("/ontology/{id}/user.json")
@@ -108,7 +101,7 @@ public class RestUserController extends RestCytomineController {
         log.debug("REST request to list user from ontology {}", id);
         Ontology ontology = ontologyService.find(id)
                 .orElseThrow(() -> new ObjectNotFoundException("Ontology", id));
-        return responseSuccess(secUserService.listUsers(ontology), isFilterRequired());
+        return responseSuccess(userService.listUsers(ontology), isFilterRequired());
     }
 
     @GetMapping("/project/{id}/userlayer.json")
@@ -121,7 +114,7 @@ public class RestUserController extends RestCytomineController {
                 .orElseThrow(() -> new ObjectNotFoundException("Project", id));
         ImageInstance image  = imageInstanceService.find(idImage).orElse(null);
 
-        return responseSuccess(secUserService.listLayers(project, image), isFilterRequired());
+        return responseSuccess(userService.listLayers(project, image), isFilterRequired());
 
     }
 
@@ -132,30 +125,19 @@ public class RestUserController extends RestCytomineController {
         log.debug("REST request to list user from storage {}", id);
         Storage storage = storageService.find(id)
                 .orElseThrow(() -> new ObjectNotFoundException("Storage", id));
-        return responseSuccess(secUserService.listUsers(storage), isFilterRequired());
+        return responseSuccess(userService.listUsers(storage), isFilterRequired());
     }
 
     @GetMapping("/user.json")
     public ResponseEntity<String> list(
-            @RequestParam(value = "publicKey", required = false) String publicKey,
-            @RequestParam(value = "withRoles", defaultValue = "false", required = false) Boolean withRoles,
-            @RequestParam(value = "withLastConsultation", defaultValue = "false", required = false) Boolean withLastConsultation,
-            @RequestParam(value = "withNumberConsultations", defaultValue = "false", required = false) Boolean withNumberConsultations,
             @RequestParam(value = "sort", defaultValue = "username", required = false) String sortColumn,
             @RequestParam(value = "order", defaultValue = "asc", required = false) String sortDirection,
             @RequestParam(value = "offset", defaultValue = "0", required = false) Long offset,
             @RequestParam(value = "max", defaultValue = "0", required = false) Long max
     ) {
         log.debug("REST request to list user");
-        if (publicKey != null) {
-            return responseSuccess(secUserService.findByPublicKey(publicKey)
-                    .orElseThrow(() -> new ObjectNotFoundException("User", JsonObject.of("publicKey", publicKey).toJsonString())));
-        }
-
-        UserSearchExtension userSearchExtension = new UserSearchExtension();
-        userSearchExtension.setWithRoles(withRoles);
         return responseSuccess(
-                secUserService.list(userSearchExtension, retrieveSearchParameters(), sortColumn, sortDirection, max, offset)
+                userService.list(retrieveSearchParameters(), sortColumn, sortDirection, max, offset)
                 , isFilterRequired()
         );
     }
@@ -166,37 +148,34 @@ public class RestUserController extends RestCytomineController {
     ) {
         log.debug("REST request to get User : {}", id);
 
-        Optional<SecUser> user = secUserService.find(id);
+        Optional<User> user = userService.find(id);
         if (user.isEmpty()) {
-            user = secUserService.findByUsername(id);
+            user = userService.findByUsername(id);
         }
 
-        return user.map( secUser -> {
-            JsonObject object = User.getDataFromDomain(secUser);
-            AuthInformation authMaps = secUserService.getAuthenticationRoles(secUser);
-            object.put("admin", authMaps.getAdmin());
-            object.put("user", authMaps.getUser());
-            object.put("guest", authMaps.getGuest());
-            return responseSuccess(object, isFilterRequired());
-        }).orElseGet(() -> responseNotFound("User", id));
+        return user.map(u -> responseSuccess(u, isFilterRequired())).orElseGet(() -> responseNotFound("User", id));
     }
 
+    /** Deprecated API keys. Will be removed in a future release **/
+    @Deprecated
     @GetMapping("/userkey/{publicKey}/keys.json")
     public ResponseEntity<String> keys(@PathVariable String publicKey) {
-        SecUser user = secUserService.findByPublicKey(publicKey)
+        User user = userService.findByPublicKey(publicKey)
                 .orElseThrow(() -> new ObjectNotFoundException("User", Map.of("publicKey", publicKey).toString()));
         securityACLService.checkIsSameUser(user, currentUserService.getCurrentUser());
         return responseSuccess(JsonObject.of("privateKey", user.getPrivateKey(), "publicKey", user.getPublicKey()));
     }
 
+    @Deprecated
     @GetMapping("/user/{id}/keys.json")
     public ResponseEntity<String> keysById(@PathVariable String id) {
-        SecUser user = secUserService.find(id)
+        User user = userService.find(id)
                 .orElseThrow(() -> new ObjectNotFoundException("User", Map.of("id or username", id).toString()));
         securityACLService.checkIsSameUser(user, currentUserService.getCurrentUser());
         return responseSuccess(JsonObject.of("privateKey", user.getPrivateKey(), "publicKey", user.getPublicKey()));
     }
 
+    @Deprecated
     @GetMapping("/signature.json")
     public ResponseEntity<String> signature(
             @RequestParam(defaultValue = "GET") String method,
@@ -207,77 +186,67 @@ public class RestUserController extends RestCytomineController {
             @RequestParam(value = "queryString", required = false, defaultValue = "") String queryString,
             @RequestParam(value = "forwardURI", required = false, defaultValue = "") String forwardURI
     ) throws UnsupportedEncodingException, NoSuchAlgorithmException, InvalidKeyException {
-        SecUser user = currentUserService.getCurrentUser();
+        User user = currentUserService.getCurrentUser();
         if (!queryString.isEmpty()) {
             queryString = "?" + queryString;
         }
-        String signature = SecurityUtils.generateKeys(method,contentMD5,contenttype.isEmpty()?contentType:contenttype,date,queryString,forwardURI,user);
+        String signature = ApiKeyFilter.generateKeys(method,contentMD5,contenttype.isEmpty()?contentType:contenttype,date,queryString,forwardURI,user);
 
         return responseSuccess(JsonObject.of("signature", signature, "publicKey", user.getPublicKey()));
     }
+
+    @GetMapping("/user/current/keys")
+    public ResponseEntity<String> getCurrentUserKeys() {
+        User user = currentUserService.getCurrentUser();
+        return responseSuccess(JsonObject.of(
+                "primaryKey", user.getPublicKey(),
+                "secondaryKey", user.getPrivateKey())
+        );
+    }
+
+    @PostMapping("/user/current/keys")
+    public ResponseEntity<String> regenerateCurrentUserKeys() {
+        User user = userService.regenerateKeys(currentUserService.getCurrentUser());
+        return responseSuccess(JsonObject.of(
+                "primaryKey", user.getPublicKey(),
+                "secondaryKey", user.getPrivateKey())
+        );
+    }
+    /******************************************************************************************************************/
+
 
     @GetMapping("/user/current.json")
     public ResponseEntity<String> getCurrentUser(
     ) {
         log.debug("REST request to get current User");
-
-        SecUser secUser = secUserService.getCurrentUser();
-
-        JsonObject object = User.getDataFromDomain(secUser);
-        if(!secUser.isAlgo()){
-            AuthInformation authMaps = secUserService.getAuthenticationRoles(secUser);
-            object.put("admin", authMaps.getAdmin());
-            object.put("user", authMaps.getUser());
-            object.put("guest", authMaps.getGuest());
-            object.put("adminByNow", authMaps.getAdminByNow());
-            object.put("userByNow", authMaps.getUserByNow());
-            object.put("guestByNow", authMaps.getGuestByNow());
-            object.put("isSwitched", SecurityUtils.isSwitched(applicationContext));
-            if(object.getJSONAttrBoolean("isSwitched", false)) {
-                object.put("realUser", SecurityUtils.getSwitchedUserOriginalUsername(applicationContext));
-            }
-        }
-        return responseSuccess(object);
+        return responseSuccess(currentUserService.getCurrentUser());
     }
 
-    @PostMapping("/user.json")
-    public ResponseEntity<String> createUser(@RequestBody String json) {
-        log.debug("REST request to save User : " + json);
-        return add(secUserService, json);
-    }
+    //TODO IAM: refactor so that only ADMIN role can create IAM ACCOUNT
+//    @PostMapping("/user.json")
+//    public ResponseEntity<String> createUser(@RequestBody String json) {
+//        log.debug("REST request to save User : " + json);
+//        return add(userService, json);
+//    }
 
-    @PutMapping("/user/{id}.json")
-    public ResponseEntity<String> updateUser(@PathVariable String id, @RequestBody JsonObject json) {
-        log.debug("REST request to update User : {}", id);
-        return update(secUserService, json);
-    }
+    //TODO IAM: refactor so that only ADMIN role can modify IAM ACCOUNT
+//    @PutMapping("/user/{id}.json")
+//    public ResponseEntity<String> updateUser(@PathVariable String id, @RequestBody JsonObject json) {
+//        log.debug("REST request to update User : {}", id);
+//        return update(userService, json);
+//    }
 
-    @DeleteMapping("/user/{id}.json")
-    public ResponseEntity<String> deleteUser(@PathVariable String id) {
-        log.debug("REST request to delete User: {}", id);
-        return delete(secUserService, JsonObject.of("id", Long.parseLong(id)), null);
-    }
+    //TODO IAM: refactor so that only ADMIN role can delete IAM ACCOUNT
+//    @DeleteMapping("/user/{id}.json")
+//    public ResponseEntity<String> deleteUser(@PathVariable String id) {
+//        log.debug("REST request to delete User: {}", id);
+//        return delete(userService, JsonObject.of("id", Long.parseLong(id)), null);
+//    }
 
-    @PostMapping("/user/{id}/lock.json")
-    public ResponseEntity<String> lock(@PathVariable Long id) {
-        log.debug("REST request to lock User : {}", id);
-        SecUser user = secUserService.find(id)
-                .orElseThrow(() -> new ObjectNotFoundException("User", id));
-        return responseSuccess(secUserService.lock(user));
-    }
-
-    @DeleteMapping("/user/{id}/lock.json")
-    public ResponseEntity<String> unlock(@PathVariable Long id) {
-        log.debug("REST request to lock User : {}", id);
-        SecUser user = secUserService.find(id)
-                .orElseThrow(() -> new ObjectNotFoundException("User", id));
-        return responseSuccess(secUserService.unlock(user));
-    }
 
     @GetMapping("/project/{id}/user.json")
     public ResponseEntity<String> showByProject(
             @PathVariable Long id,
-            @RequestParam(value = "withUserJob", defaultValue = "false", required = false) Boolean withUserJob,
             @RequestParam(value = "withLastImage", defaultValue = "false", required = false) Boolean withLastImage,
             @RequestParam(value = "withLastConsultation", defaultValue = "false", required = false) Boolean withLastConsultation,
             @RequestParam(value = "withNumberConsultations", defaultValue = "false", required = false) Boolean withNumberConsultations,
@@ -294,10 +263,9 @@ public class RestUserController extends RestCytomineController {
         userSearchExtension.setWithLastImage(withLastImage);
         userSearchExtension.setWithLastConnection(withLastConsultation);
         userSearchExtension.setWithNumberConnections(withNumberConsultations);
-        userSearchExtension.setWithUserJob(withUserJob);
 
         return responseSuccess(
-                secUserService.listUsersExtendedByProject(project, userSearchExtension, retrieveSearchParameters(), sortColumn, sortDirection, max, offset)
+                userService.listUsersExtendedByProject(project, userSearchExtension, retrieveSearchParameters(), sortColumn, sortDirection, max, offset)
                 , isFilterRequired()
         );
     }
@@ -305,21 +273,21 @@ public class RestUserController extends RestCytomineController {
     @PostMapping("/project/{project}/user/{user}.json")
     public ResponseEntity<String> addUserToProject(@PathVariable("project") Long projectId, @PathVariable("user") Long userId) {
         log.debug("REST request to add User {} to project {}", userId, projectId);
-        SecUser user = secUserService.find(userId)
+        User user = userService.find(userId)
                 .orElseThrow(() -> new ObjectNotFoundException("User", userId));
         Project project = projectService.find(projectId)
                 .orElseThrow(() -> new ObjectNotFoundException("Project", projectId));
-        secUserService.addUserToProject(user, project, false);
+        userService.addUserToProject(user, project, false);
         return responseSuccess(JsonObject.of("data", JsonObject.of("message", "OK")).toJsonString());
     }
 
     @PostMapping("/project/{project}/user.json")
-    public ResponseEntity<String> addUsersToProject(@PathVariable("project") Long projectId, @RequestParam("users") String users) {
-        log.debug("REST request to add Users {} to project {}", users, projectId);
+    public ResponseEntity<String> addUsersToProject(@PathVariable("project") Long projectId, @RequestParam("users") String userIds) {
+        log.debug("REST request to add Users {} to project {}", userIds, projectId);
         Project project = projectService.find(projectId)
                 .orElseThrow(() -> new ObjectNotFoundException("Project", projectId));
 
-        List<String> usersIds = Arrays.stream(users.split(",")).collect(Collectors.toList());
+        List<String> usersIds = Arrays.stream(userIds.split(",")).toList();
 
         String errorMessage = "";
         List<String> errors = new ArrayList<>();
@@ -333,14 +301,14 @@ public class RestUserController extends RestCytomineController {
             }
         }
 
-        List<SecUser> secUsers = secUserService.list(usersValidIds);
+        List<User> users = userService.list(usersValidIds);
 
         wrongIds.addAll(usersIds);
-        wrongIds.removeAll(secUsers.stream().map(x -> String.valueOf(x.getId())).collect(Collectors.toList()));
+        wrongIds.removeAll(users.stream().map(x -> String.valueOf(x.getId())).toList());
 
-        for (SecUser user : secUsers) {
+        for (User user : users) {
             try {
-                secUserService.addUserToProject(user, project, false);
+                userService.addUserToProject(user, project, false);
             } catch(Exception e) {
                 errors.add(user.getId().toString());
             }
@@ -369,21 +337,21 @@ public class RestUserController extends RestCytomineController {
     @DeleteMapping("/project/{project}/user/{user}.json")
     public ResponseEntity<String> deleteUserFromProject(@PathVariable("project") Long projectId, @PathVariable("user") Long userId) {
         log.debug("REST request to remove User {} from project {}", userId, projectId);
-        SecUser user = secUserService.find(userId)
+        User user = userService.find(userId)
                 .orElseThrow(() -> new ObjectNotFoundException("User", userId));
         Project project = projectService.find(projectId)
                 .orElseThrow(() -> new ObjectNotFoundException("Project", projectId));
-        secUserService.deleteUserFromProject(user, project, false);
+        userService.deleteUserFromProject(user, project, false);
         return responseSuccess(JsonObject.of("data", JsonObject.of("message", "OK")).toJsonString());
     }
 
     @DeleteMapping("/project/{project}/user.json")
-    public ResponseEntity<String> deleteUsersFromProject(@PathVariable("project") Long projectId, @RequestParam("users") String users) {
-        log.debug("REST request to add Users {} to project {}", users, projectId);
+    public ResponseEntity<String> deleteUsersFromProject(@PathVariable("project") Long projectId, @RequestParam("users") String userIds) {
+        log.debug("REST request to add Users {} to project {}", userIds, projectId);
         Project project = projectService.find(projectId)
                 .orElseThrow(() -> new ObjectNotFoundException("Project", projectId));
 
-        List<String> usersIds = Arrays.stream(users.split(",")).collect(Collectors.toList());
+        List<String> usersIds = Arrays.stream(userIds.split(",")).toList();
 
         String errorMessage = "";
         List<String> errors = new ArrayList<>();
@@ -397,14 +365,14 @@ public class RestUserController extends RestCytomineController {
             }
         }
 
-        List<SecUser> secUsers = secUserService.list(usersValidIds);
+        List<User> users = userService.list(usersValidIds);
 
         wrongIds.addAll(usersIds);
-        wrongIds.removeAll(secUsers.stream().map(x -> String.valueOf(x.getId())).collect(Collectors.toList()));
+        wrongIds.removeAll(users.stream().map(x -> String.valueOf(x.getId())).toList());
 
-        for (SecUser user : secUsers) {
+        for (User user : users) {
             try {
-                secUserService.deleteUserFromProject(user, project, false);
+                userService.deleteUserFromProject(user, project, false);
             } catch(Exception e) {
                 errors.add(user.getId().toString());
             }
@@ -433,78 +401,51 @@ public class RestUserController extends RestCytomineController {
     @PostMapping("/project/{project}/user/{user}/admin.json")
     public ResponseEntity<String> addUserAdminToProject(@PathVariable("project") Long projectId, @PathVariable("user") Long userId) {
         log.debug("REST request to add User {} to project {}", userId, projectId);
-        SecUser user = secUserService.find(userId)
+        User user = userService.find(userId)
                 .orElseThrow(() -> new ObjectNotFoundException("User", userId));
         Project project = projectService.find(projectId)
                 .orElseThrow(() -> new ObjectNotFoundException("Project", projectId));
-        secUserService.addUserToProject(user, project, true);
+        userService.addUserToProject(user, project, true);
         return responseSuccess(JsonObject.of("data", JsonObject.of("message", "OK")).toJsonString());
     }
 
     @DeleteMapping("/project/{project}/user/{user}/admin.json")
     public ResponseEntity<String> deleteUserAdminFromProject(@PathVariable("project") Long projectId, @PathVariable("user") Long userId) {
         log.debug("REST request to remove User {} from project {}", userId, projectId);
-        SecUser user = secUserService.find(userId)
+        User user = userService.find(userId)
                 .orElseThrow(() -> new ObjectNotFoundException("User", userId));
         Project project = projectService.find(projectId)
                 .orElseThrow(() -> new ObjectNotFoundException("Project", projectId));
         if (!Objects.equals(currentUserService.getCurrentUser().getId(), user.getId())) {
             securityACLService.check(project,ADMINISTRATION);
         }
-        secUserService.deleteUserFromProject(user, project, true);
+        userService.deleteUserFromProject(user, project, true);
         return responseSuccess(JsonObject.of("data", JsonObject.of("message", "OK")).toJsonString());
     }
 
     @PostMapping("/storage/{storage}/user/{user}.json")
     public ResponseEntity<String> addUserToStorage(@PathVariable("storage") Long storageId, @PathVariable("user") Long userId) {
         log.debug("REST request to add User {} to storage {}", userId, storageId);
-        SecUser user = secUserService.find(userId)
+        User user = userService.find(userId)
                 .orElseThrow(() -> new ObjectNotFoundException("User", userId));
         Storage storage = storageService.find(storageId)
                 .orElseThrow(() -> new ObjectNotFoundException("Storage", storageId));
-        secUserService.addUserToStorage(user, storage);
+        userService.addUserToStorage(user, storage);
         return responseSuccess(JsonObject.of("data", JsonObject.of("message", "OK")).toJsonString());
     }
 
     @DeleteMapping("/storage/{storage}/user/{user}.json")
     public ResponseEntity<String> deleteUserFromStorage(@PathVariable("storage") Long storageId, @PathVariable("user") Long userId) {
         log.debug("REST request to remove User {} from storage {}", userId, storageId);
-        SecUser user = secUserService.find(userId)
+        User user = userService.find(userId)
                 .orElseThrow(() -> new ObjectNotFoundException("User", userId));
         Storage storage = storageService.find(storageId)
                 .orElseThrow(() -> new ObjectNotFoundException("Storage", storageId));
-        secUserService.deleteUserFromStorage(user, storage);
+        userService.deleteUserFromStorage(user, storage);
         return responseSuccess(JsonObject.of("data", JsonObject.of("message", "OK")).toJsonString());
     }
 
-    @PutMapping("/user/{user}/password.json")
-    public ResponseEntity<String> resetPassword(@PathVariable("user") Long userId,
-                                                @RequestBody JsonObject json) {
-        log.debug("REST request to resetpassword for User {}", userId);
-        SecUser user = secUserService.find(userId)
-                .orElseThrow(() -> new ObjectNotFoundException("User", userId));
-        String newPassword = json.getJSONAttrStr("password");
-        if (StringUtils.isNotBlank(newPassword)) {
-            secUserService.changeUserPassword((User) user,newPassword);
-            return responseSuccess(user, isFilterRequired());
-        } else {
-            throw new WrongArgumentException("Password is missing in JSON");
-        }
-
-    }
-
-    @RequestMapping(path = {"/user/security_check.json"}, method = {RequestMethod.GET, RequestMethod.POST})
-    public ResponseEntity<String> checkPassword(@RequestBody JsonObject json) {
-        log.debug("REST request to check password for current user");
-        User user = (User)secUserService.getCurrentUser();
-        String newPassword = json.getJSONAttrStr("password");
-        if(secUserService.isUserPassword(user, newPassword)) {
-            return responseSuccess(JsonObject.of(), isFilterRequired());
-        } else {
-            throw new AuthenticationException("No matching password");
-        }
-    }
-
+    // TODO IAM: what about online
     @GetMapping("/user/{id}/friends.json")
     public ResponseEntity<String> listFriends(
             @PathVariable Long id,
@@ -513,30 +454,30 @@ public class RestUserController extends RestCytomineController {
     ) {
         log.debug("REST request to list user layers from project {}", id);
 
-        User user = secUserService.findUser(id)
+        User user = userService.findUser(id)
                 .orElseThrow(() -> new ObjectNotFoundException("User", id));
 
-        List<SecUser> friends = new ArrayList<>();
+        List<User> friends = new ArrayList<>();
 
         if (offlineToo) {
             if (projectId!=null) {
                 //get all user project list
                 Project project = projectService.find(projectId)
                         .orElseThrow(() -> new ObjectNotFoundException("Project", projectId));
-                friends = secUserService.listUsers(project);
+                friends = userService.listUsers(project);
             } else {
                 //get all people that share common project with user
-                friends = secUserService.getAllFriendsUsers(user);
+                friends = userService.getAllFriendsUsers(user);
             }
         } else {
             if (projectId!=null) {
                 //get user project online
                 Project project = projectService.find(projectId)
                         .orElseThrow(() -> new ObjectNotFoundException("Project", projectId));
-                friends = secUserService.getAllFriendsUsersOnline(user, project);
+                friends = userService.getAllFriendsUsersOnline(user, project);
             } else {
                 //get friends online
-                friends = secUserService.getAllFriendsUsersOnline(user);
+                friends = userService.getAllFriendsUsersOnline(user);
             }
         }
         return responseSuccess(friends, isFilterRequired());
@@ -550,7 +491,7 @@ public class RestUserController extends RestCytomineController {
 
         Project project = projectService.find(projectId)
                 .orElseThrow(() -> new ObjectNotFoundException("Project", projectId));
-        return responseSuccess(secUserService.getAllOnlineUserWithTheirPositions(project), isFilterRequired());
+        return responseSuccess(userService.getAllOnlineUserWithTheirPositions(project), isFilterRequired());
     }
 
     @GetMapping("/project/{project}/usersActivity.json")
@@ -561,7 +502,7 @@ public class RestUserController extends RestCytomineController {
 
         Project project = projectService.find(projectId)
                 .orElseThrow(() -> new ObjectNotFoundException("Project", projectId));
-        return responseSuccess(secUserService.getUsersWithLastActivities(project), isFilterRequired());
+        return responseSuccess(userService.getUsersWithLastActivities(project), isFilterRequired());
     }
 
     @GetMapping("/project/{project}/user/download")
@@ -574,15 +515,14 @@ public class RestUserController extends RestCytomineController {
         Project project = projectService.find(projectId)
                 .orElseThrow(() -> new ObjectNotFoundException("Project", projectId));
 
-        List<SecUser> projectUsers = secUserService.listUsers(project);
+        List<User> projectUsers = userService.listUsers(project);
         List<Map<String, Object>> users = new ArrayList<>();
 
-        for (SecUser user : projectUsers) {
+        for (User user : projectUsers) {
             if (user instanceof User) {
                 users.add(Map.of(
-                        "username", user.getUsername(),
-                        "firstname", (((User) user).getFirstname()),
-                        "lastname", (((User) user).getLastname())
+                        "username", ((User) user).getUsername(),
+                        "name", (((User) user).getName())
                 ));
             }
 
@@ -598,12 +538,12 @@ public class RestUserController extends RestCytomineController {
     ) {
         log.debug("REST request to list activities for user {} and for project {}", userId, projectId);
 
-        User user = secUserService.findUser(userId)
+        User user = userService.findUser(userId)
                 .orElseThrow(() -> new ObjectNotFoundException("User", userId));
         Project project = projectService.find(projectId)
                 .orElseThrow(() -> new ObjectNotFoundException("Project", projectId));
 
-        return responseSuccess(secUserService.getResumeActivities(project, user), isFilterRequired());
+        return responseSuccess(userService.getResumeActivities(project, user), isFilterRequired());
     }
 
     boolean isFilterRequired() {
@@ -612,12 +552,5 @@ public class RestUserController extends RestCytomineController {
             return false;
         } catch(ForbiddenException e){}
         return true;
-    }
-
-    @Override
-    protected void filterOneElement(Map<String, Object> element) {
-        if (element.get("id")!=null && !element.get("id").equals(currentUserService.getCurrentUser().getId())) {
-            element.remove("email");
-        }
     }
 }
