@@ -66,7 +66,6 @@ import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.time.DateUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.*;
-import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.ReflectionUtils;
@@ -83,16 +82,11 @@ import static org.springframework.security.acls.domain.BasePermission.*;
 @Slf4j
 @Service
 @Transactional
-public class SecUserService extends ModelService {
+public class UserService extends ModelService {
 
     @Autowired
     private UserPositionService userPositionService;
 
-    @Autowired
-    PasswordEncoder passwordEncoder;
-
-    @Autowired
-    private SecUserRepository secUserRepository;
 
     @Autowired
     private UserRepository userRepository;
@@ -140,13 +134,7 @@ public class SecUserService extends ModelService {
     private UndoStackItemRepository undoStackItemRepository;
 
     @Autowired
-    private SecUserSecRoleService secUserSecRoleService;
-
-    @Autowired
-    private AlgoAnnotationService algoAnnotationService;
-
-    @Autowired
-    private AlgoAnnotationRepository algoAnnotationRepository;
+    private SecUserSecRoleService secSecUserSecRoleService;
 
     @Autowired
     private UserAnnotationService userAnnotationService;
@@ -159,12 +147,6 @@ public class SecUserService extends ModelService {
 
     @Autowired
     private ReviewedAnnotationRepository reviewedAnnotationRepository;
-
-    @Autowired
-    private AlgoAnnotationTermService algoAnnotationTermService;
-
-    @Autowired
-    private AlgoAnnotationTermRepository algoAnnotationTermRepository;
 
     @Autowired
     private AnnotationTermService annotationTermService;
@@ -203,7 +185,7 @@ public class SecUserService extends ModelService {
     private ProjectRepresentativeUserRepository projectRepresentativeUserRepository;
 
     @Autowired
-    private SecUserSecRoleRepository secUserSecRoleRepository;
+    private SecUserSecRoleRepository secSecUserSecRoleRepository;
 
     @Autowired
     private SecRoleRepository secRoleRepository;
@@ -226,12 +208,16 @@ public class SecUserService extends ModelService {
     @Autowired
     private StorageRepository storageRepository;
 
-    public Optional<SecUser> find(Long id) {
+    public Optional<User> find(Long id) {
         securityACLService.checkGuest(currentUserService.getCurrentUser());
-        return secUserRepository.findById(id);
+        return userRepository.findById(id);
     }
 
-    public Optional<SecUser> find(String id) {
+    public Optional<User> find(UUID sub) {
+        return userRepository.findByReference(String.valueOf(sub));
+    }
+
+    public Optional<User> find(String id) {
         try {
             return find(Long.valueOf(id));
         } catch (NumberFormatException ex) {
@@ -244,31 +230,22 @@ public class SecUserService extends ModelService {
         return userRepository.findById(id);
     }
 
-    public boolean isUserJob(Long id) {
-        return find(id).map(SecUser::isAlgo).orElse(false);
-    }
-
-    public SecUser get(Long id) {
+    public User get(Long id) {
         securityACLService.checkGuest(currentUserService.getCurrentUser());
         return find(id).orElse(null);
     }
 
-    public Optional<SecUser> findByUsername(String username) {
+    public Optional<User> findByUsername(String username) {
         securityACLService.checkGuest(currentUserService.getCurrentUser());
-        return secUserRepository.findByUsernameLikeIgnoreCase(username);
+        return userRepository.findByUsernameLikeIgnoreCase(username);
     }
 
-    public Optional<User> findByEmail(String email) {
+    public Optional<User> findByPublicKey(String publicKey) {
         securityACLService.checkGuest(currentUserService.getCurrentUser());
-        return userRepository.findByEmailLikeIgnoreCase(email);
+        return userRepository.findByPublicKey(publicKey);
     }
 
-    public Optional<SecUser> findByPublicKey(String publicKey) {
-        securityACLService.checkGuest(currentUserService.getCurrentUser());
-        return secUserRepository.findByPublicKey(publicKey);
-    }
-
-    public AuthInformation getAuthenticationRoles(SecUser user) {
+    public AuthInformation getAuthenticationRoles(User user) {
         AuthInformation authInformation = new AuthInformation();
         authInformation.setAdmin(currentRoleService.isAdmin(user));
         authInformation.setUser(!authInformation.getAdmin() && currentRoleService.isUser(user));
@@ -281,11 +258,8 @@ public class SecUserService extends ModelService {
         return authInformation;
     }
 
-    public SecUser getCurrentUser() {
-        return currentUserService.getCurrentUser();
-    }
-
-    public Page<Map<String, Object>> list(UserSearchExtension userSearchExtension, List<SearchParameterEntry> searchParameters, String sortColumn, String sortDirection, Long max, Long offset) {
+    // TODO 2024.2
+    public Page<Map<String, Object>> list(List<SearchParameterEntry> searchParameters, String sortColumn, String sortDirection, Long max, Long offset) {
 
         securityACLService.checkGuest(currentUserService.getCurrentUser());
 
@@ -295,11 +269,8 @@ public class SecUserService extends ModelService {
         if (sortDirection == null) {
             sortDirection = "asc";
         }
-        if (sortColumn.equals("role") && !userSearchExtension.isWithRoles()) {
-            throw new WrongArgumentException("Cannot sort on user role without argument withRoles");
-        }
 
-        if (ReflectionUtils.findField(User.class, sortColumn) == null && !(List.of("role", "fullName").contains(sortColumn))) {
+        if (ReflectionUtils.findField(User.class, sortColumn) == null && !(List.of("fullName").contains(sortColumn))) {
             throw new CytomineMethodNotYetImplementedException("User list sorted by " + sortColumn + "is not implemented");
         }
 
@@ -307,7 +278,7 @@ public class SecUserService extends ModelService {
 
         String select = "SELECT u.* ";
         String from = "FROM sec_user u ";
-        String where = "WHERE job_id IS NULL AND u.class LIKE 'be.cytomine.domain.security.User' " ; //TODO: change for migration
+        String where = "WHERE true " ;
         String search = "";
         String groupBy = "";
         String sort;
@@ -317,22 +288,12 @@ public class SecUserService extends ModelService {
         if (multiSearch.isPresent()) {
             String value = ((String) multiSearch.get().getValue()).toLowerCase();
             value = "%"+value+"%";
-            where += " and (u.firstname ILIKE :name OR u.lastname ILIKE :name OR u.email ILIKE :name OR u.username ILIKE :name) ";
+            where += " and (u.name ILIKE :name OR u.username ILIKE :name) ";
             mapParams.put("name", value);
         }
-        if (userSearchExtension.isWithRoles()) {
-            select += ", MAX(x.order_number) as role ";
-            from += ", sec_user_sec_role sur, sec_role r " +
-                    "JOIN (VALUES ('ROLE_GUEST', 1), ('ROLE_USER' ,2), ('ROLE_ADMIN', 3), ('ROLE_SUPER_ADMIN', 4)) as x(value, order_number) ON r.authority = x.value ";
-            where += "and u.id = sur.sec_user_id and sur.sec_role_id = r.id ";
-            groupBy = "GROUP BY u.id ";
-        }
 
-
-        if (sortColumn.equals("role")) {
-            sort = "ORDER BY " + sortColumn + " " + sortDirection + ", u.id ASC ";
-        } else if (sortColumn.equals("fullName")) {
-            sort = "ORDER BY u.firstname " + sortDirection + ", u.id ";
+        if (sortColumn.equals("fullName")) {
+            sort = "ORDER BY u.name " + sortDirection + ", u.id ";
         } else if (!sortColumn.equals("id")) { //avoid random sort when multiple values of the
             sort = "ORDER BY u." + sortColumn + " " + sortDirection + ", u.id ";
         } else sort = "ORDER BY u." + sortColumn + " " + sortDirection + " ";
@@ -360,28 +321,7 @@ public class SecUserService extends ModelService {
                 result.put(alias, value);
             }
 
-            result.put("language", Language.valueOf(result.getJSONAttrStr("language")));
             JsonObject object = User.getDataFromDomain(new User().buildDomainFromJson(result, getEntityManager()));
-            object.put("algo", false);
-
-            if (userSearchExtension.isWithRoles()) {
-                String role = "UNDEFINED";
-                switch ((Integer) result.get("role")) {
-                    case 1:
-                        role = "ROLE_GUEST";
-                        break;
-                    case 2:
-                        role = "ROLE_USER";
-                        break;
-                    case 3:
-                        role = "ROLE_ADMIN";
-                        break;
-                    case 4:
-                        role = "ROLE_SUPER_ADMIN";
-                        break;
-                }
-                object.put("role", role);
-            }
             results.add(object);
         }
         request = "SELECT COUNT(DISTINCT U.id) " + from + where + search;
@@ -391,8 +331,7 @@ public class SecUserService extends ModelService {
         }
         long count = (Long) query.getResultList().get(0);
 
-        Page<Map<String, Object>> page = PageUtils.buildPageFromPageResults(results, max, offset, count);
-        return page;
+        return PageUtils.buildPageFromPageResults(results, max, offset, count);
     }
 
     public Page<JsonObject> listUsersExtendedByProject(Project project, UserSearchExtension userSearchExtension, List<SearchParameterEntry> searchParameters, String sortColumn, String sortDirection, Long max, Long offset) {
@@ -501,28 +440,27 @@ public class SecUserService extends ModelService {
         Optional<SearchParameterEntry> multiSearch = searchParameters.stream().filter(x -> x.getProperty().equals("fullName")).findFirst();
         Optional<SearchParameterEntry> projectRoleSearch = searchParameters.stream().filter(x -> x.getProperty().equals("projectRole")).findFirst();
 
-        String select = "select distinct secUser ";
-        String from = "from ProjectRepresentativeUser r right outer join r.user secUser ON (r.project.id = " + project.getId() + "), " +
+        String select = "select distinct user ";
+        String from = "from ProjectRepresentativeUser r right outer join r.user user ON (r.project.id = " + project.getId() + "), " +
                 "AclObjectIdentity as aclObjectId, AclEntry as aclEntry, AclSid as aclSid ";
         String where = "where aclObjectId.objectId = " + project.getId() + " " +
                 "and aclEntry.aclObjectIdentity = aclObjectId " +
                 "and aclEntry.sid = aclSid " +
-                "and aclSid.sid = secUser.username " +
-                "and secUser.class = 'be.cytomine.domain.security.User' ";
+                "and aclSid.sid = user.username ";
         String groupBy = "";
         String order = "";
         String having = "";
 
         if (multiSearch.isPresent()) {
             String value = ((String) multiSearch.get().getValue()).toLowerCase();
-            where += " and (lower(secUser.firstname) like '%$value%' or lower(secUser.lastname) like '%" + value + "%' or lower(secUser.email) like '%" + value + "%') ";
+            where += " and (lower(user.username) like '%$value%' or lower(user.name) like '%" + value + "%') ";
         }
         if (onlineUserSearch.isPresent()) {
             List<Long> onlineUsers = getAllOnlineUserIds(project);
             if (onlineUsers.isEmpty()) {
                 return Page.empty();
             }
-            where += " and secUser.id in (" + onlineUsers.stream().map(String::valueOf).collect(Collectors.joining(",")) + ") ";
+            where += " and user.id in (" + onlineUsers.stream().map(String::valueOf).collect(Collectors.joining(",")) + ") ";
         }
 
 
@@ -538,14 +476,14 @@ public class SecUserService extends ModelService {
                 "     WHEN aclEntry.mask = 16 THEN 'manager'\n" +
                 "     ELSE 'contributor'\n" +
                 " END) as role ";
-        groupBy = "GROUP BY secUser.id , secUser.accountExpired , secUser.accountLocked, secUser.created, secUser.enabled, secUser.origin, secUser.password, secUser.passwordExpired, secUser.privateKey, secUser.publicKey, secUser.updated, secUser.username, secUser.version,secUser.email,secUser.firstname,secUser.isDeveloper,secUser.language,secUser.lastname,secUser.creator";
+        groupBy = "GROUP BY user.id , user.accountExpired , user.accountLocked, user.created, user.enabled, user.origin, user.password, user.passwordExpired, user.privateKey, user.publicKey, user.updated, user.username, user.version,user.email,user.firstname,user.isDeveloper,user.language,user.lastname,user.creator,user.name,user.reference";
 
         if (sortColumn.equals("projectRole")) {
             sortColumn = "role";
         } else if (sortColumn.equals("fullName")) {
-            sortColumn = "secUser.firstname";
+            sortColumn = "user.name";
         } else {
-            sortColumn = "secUser." + sortColumn;
+            sortColumn = "user." + sortColumn;
         }
         order = " order by " + sortColumn + " " + sortDirection;
 
@@ -568,7 +506,23 @@ public class SecUserService extends ModelService {
             results.add(jsonObject);
         }
 
-        request = "SELECT COUNT(DISTINCT secUser) " + from + where;
+
+//        List<Map<String, Object>> results = new ArrayList<>();
+//        for (Tuple rowResult : resultList) {
+//            JsonObject result = new JsonObject();
+//            for (TupleElement<?> element : rowResult.getElements()) {
+//                Object value = rowResult.get(element.getAlias());
+//                if (value instanceof BigInteger) {
+//                    value = ((BigInteger)value).longValue();
+//                }
+//                String alias = SQLUtils.toCamelCase(element.getAlias());
+//                result.put(alias, value);
+//            }
+//            JsonObject object = Project.getDataFromDomain(new User().buildDomainFromJson(result, getEntityManager()));
+//            object.put("role", result.get("role"));
+//            results.add(object);
+//        }
+        request = "SELECT COUNT(DISTINCT user) " + from + where;
         query = getEntityManager().createQuery(request);
         long count = ((Long) query.getResultList().get(0));
         Page<JsonObject> page = PageUtils.buildPageFromPageResults(results, max, offset, count);
@@ -578,46 +532,35 @@ public class SecUserService extends ModelService {
     }
 
 
-    public List<SecUser> listAdmins(Project project) {
+    public List<User> listAdmins(Project project) {
         return listAdmins(project, true);
     }
 
-    public List<SecUser> listAdmins(Project project, boolean checkPermission) {
+    public List<User> listAdmins(Project project, boolean checkPermission) {
         if (checkPermission) {
             securityACLService.check(project, READ);
         }
-        return secUserRepository.findAllAdminsByProjectId(project.getId());
+        return userRepository.findAllAdminsByProjectId(project.getId());
     }
 
-    public Optional<SecUser> findCreator(Project project) {
+    public Optional<User> findCreator(Project project) {
         securityACLService.check(project,READ);
         return aclRepository.listCreators(project.getId()).stream().findFirst();
     }
 
-    public List<SecUser> listUsers(Project project) {
-        return listUsers(project, false, true);
+    public List<User> listUsers(Project project) {
+        securityACLService.check(project, READ);
+        return userRepository.findAllUsersByProjectId(project.getId());
     }
 
-    public List<SecUser> listUsers(Project project, boolean showUserJob, boolean checkPermission) {
-        if (checkPermission) {
-            securityACLService.check(project, READ);
-        }
-        List<SecUser> users = secUserRepository.findAllUsersByProjectId(project.getId());
-
-        if (showUserJob) {
-            throw new RuntimeException("Not yet implemented (showUserJob)");
-        }
-        return users;
+    public List<User> list(List<Long> ids) {
+        return userRepository.findAllByIdIn(ids);
     }
 
-    public List<SecUser> list(List<Long> ids) {
-        return secUserRepository.findAllByIdIn(ids);
-    }
-
-    public List<SecUser> listUsers(Ontology ontology) {
+    public List<User> listUsers(Ontology ontology) {
         securityACLService.check(ontology, READ);
         //TODO:: Not optim code a single SQL request will be very faster
-        List<SecUser> users = new ArrayList<>();
+        List<User> users = new ArrayList<>();
         List<Project> projects = projectRepository.findAllByOntology(ontology);
         for (Project project : projects) {
             users.addAll(listUsers(project));
@@ -625,37 +568,13 @@ public class SecUserService extends ModelService {
         return users.stream().distinct().collect(Collectors.toList());
     }
 
-    public List<SecUser> listUsers(Storage storage) {
+    public List<User> listUsers(Storage storage) {
         securityACLService.check(storage, READ);
-        return secUserRepository.findAllUsersByStorageId(storage.getId());
+        return userRepository.findAllUsersByStorageId(storage.getId());
     }
 
-    public CommandResponse lock(SecUser user) {
-        SecUser currentUser = currentUserService.getCurrentUser();
-        securityACLService.checkAdmin(currentUser);
-        if (!user.getEnabled()) {
-            throw new WrongArgumentException("User already locked !");
-        }
-
-        return executeCommand(new EditCommand(currentUser, null), user, user.toJsonObject().withChange("enabled", false));
-    }
-
-    public CommandResponse unlock(SecUser user) {
-        SecUser currentUser = currentUserService.getCurrentUser();
-        log.info("unlock user " + user.getUsername() + " triggered by " + currentUser.getUsername());
-        securityACLService.checkAdmin(currentUser);
-        if (user.getEnabled()) {
-            throw new WrongArgumentException("User already unlocked !");
-        }
-
-        return executeCommand(new EditCommand(currentUser, null), user, user.toJsonObject().withChange("enabled", true));
-    }
-
-    public List<SecUser> listAll(Project project) {
-        List<SecUser> data = new ArrayList<>();
-        data.addAll(listUsers(project));
-        //TODO: could be optim!!!
-        return data;
+    public List<User> listAll(Project project) {
+        return new ArrayList<>(listUsers(project));
     }
     /**
      * List all layers from a project
@@ -663,13 +582,13 @@ public class SecUserService extends ModelService {
      * If project has private layer, just get current user layer
      */
     public List<JsonObject> listLayers(Project project, ImageInstance image) {
-        SecUser currentUser = currentUserService.getCurrentUser();
+        User currentUser = currentUserService.getCurrentUser();
         securityACLService.check(project, READ, currentUser);
 
-        List<SecUser> humanAdmins = listAdmins(project);
-        List<SecUser> humanUsers = listUsers(project);
+        List<User> humanAdmins = listAdmins(project);
+        List<User> humanUsers = listUsers(project);
 
-        List<JsonObject> humanUsersFormatted = humanUsers.stream().map(SecUser::toJsonObject).collect(Collectors.toList());
+        List<JsonObject> humanUsersFormatted = humanUsers.stream().map(User::toJsonObject).toList();
 
         List<JsonObject> layersFormatted = new ArrayList<>();
 
@@ -679,9 +598,9 @@ public class SecUserService extends ModelService {
         } else if (project.isHideAdminsLayers() && !project.isHideUsersLayers()) {
             Set<Long> humanAdminsIds = humanAdmins.stream().map(CytomineDomain::getId).collect(Collectors.toSet());
             layersFormatted.addAll(humanUsersFormatted.stream()
-                    .filter(x -> !humanAdminsIds.contains(x.getJSONAttrLong("id"))).collect(Collectors.toList()));
-        } else if (!project.isHideAdminsLayers() && project.isHideUsersLayers()) {
-            layersFormatted.addAll(humanAdmins.stream().map(SecUser::toJsonObject).collect(Collectors.toList()));
+                    .filter(x -> !humanAdminsIds.contains(x.getJSONAttrLong("id"))).toList());
+        } else if (!project.isHideAdminsLayers()) {
+            layersFormatted.addAll(humanAdmins.stream().map(User::toJsonObject).toList());
         }
 
         if (humanUsers.contains(currentUser) && layersFormatted.stream().noneMatch(x -> x.getJSONAttrLong("id").equals(currentUser.getId()))) {
@@ -696,7 +615,7 @@ public class SecUserService extends ModelService {
         List<Long> usersId = this.getAllFriendsUsersOnline(currentUserService.getCurrentUser(), project).stream().map(CytomineDomain::getId)
                     .collect(Collectors.toList());
         List<JsonObject> usersWithPosition = userPositionService.findUsersPositions(project);
-        usersId.removeAll(usersWithPosition.stream().map(JsonObject::getId).collect(Collectors.toList()));
+        usersId.removeAll(usersWithPosition.stream().map(JsonObject::getId).toList());
 
         for (Long userId : usersId) {
             usersWithPosition.add(JsonObject.of("id", userId, "position", new ArrayList<>()));
@@ -725,7 +644,7 @@ public class SecUserService extends ModelService {
     }
 
     public String fillEmptyUserIds(String users, Long project){
-        if (users == null || users.equals("")) {
+        if (users == null || users.isEmpty()) {
             users = getUsersIdsFromProject(project);
         }
         return users;
@@ -733,7 +652,7 @@ public class SecUserService extends ModelService {
 
     public String getUsersIdsFromProject(Long project){
         String users = "";
-        for (SecUser user: listUsers(projectService.get(project))) {
+        for (User user: listUsers(projectService.get(project))) {
             users += user.getId() + ",";
         }
         return users;
@@ -741,7 +660,7 @@ public class SecUserService extends ModelService {
 
     public List<JsonObject> getUsersWithLastActivities(Project project) {
         List<JsonObject> results = new ArrayList<>();
-        List<SecUser> users = listUsers(project).stream().sorted(Comparator.comparing(CytomineDomain::getId)).collect(Collectors.toList());
+        List<User> users = listUsers(project).stream().sorted(Comparator.comparing(CytomineDomain::getId)).toList();
 
 
         Map<Long, JsonObject> connections = projectConnectionService.lastConnectionInProject(project, null, "user", "asc", 0L, 0L)
@@ -751,10 +670,8 @@ public class SecUserService extends ModelService {
         Map<Long, JsonObject> images = imageConsultationService.lastImageOfUsersByProject(project, null, "user", "asc", 0L, 0L)
                 .stream().collect(Collectors.toMap(x -> x.getJSONAttrLong("user"), Function.identity()));
 
-        for (SecUser secUser : users) {
-            if (secUser instanceof User) {
-                User user = (User)secUser;
-
+        for (User user : users) {
+            if (user != null) {
                 JsonObject image = images.get(user.getId());
                 JsonObject connection = connections.get(user.getId());
                 JsonObject frequency = frequencies.get(user.getId());
@@ -762,9 +679,8 @@ public class SecUserService extends ModelService {
                 JsonObject jsonObject = new JsonObject();
                 jsonObject.put("id", user.getId());
                 jsonObject.put("username", user.getUsername());
-                jsonObject.put("firstname", user.getFirstname());
-                jsonObject.put("lastname", user.getLastname());
-                jsonObject.put("email", user.getEmail());
+                jsonObject.put("name", user.getName());
+                jsonObject.put("fullName", user.getFullName());
                 jsonObject.put("lastImageId", (image!=null? image.get("image") : null));
                 jsonObject.put("lastImageName", (image!=null? image.get("imageName") : null));
                 jsonObject.put("lastConnection", (connection!=null? connection.get("created") : null));
@@ -779,14 +695,14 @@ public class SecUserService extends ModelService {
     /**
      * Get all online user
      */
-    public List<SecUser> getAllOnlineUsers() {
+    public List<User> getAllOnlineUsers() {
         securityACLService.checkGuest(currentUserService.getCurrentUser());
         //get date with -X secondes
         Date xSecondAgo = DateUtils.addSeconds(new Date(), -300);
         // TODO: could be improve regarding performance...
         List<LastConnection> connections = lastConnectionRepository.findAllByCreatedAfter(xSecondAgo);
         List<Long> userIds = connections.stream().map(LastConnection::getUser).distinct().collect(Collectors.toList());
-        return secUserRepository.findAllByIdIn(userIds);
+        return userRepository.findAllByIdIn(userIds);
     }
 
     /**
@@ -805,26 +721,26 @@ public class SecUserService extends ModelService {
     /**
      * Get all online user for a project
      */
-    public List<SecUser> getAllOnlineUsers(Project project) {
+    public List<User> getAllOnlineUsers(Project project) {
         securityACLService.check(project, READ);
-        return secUserRepository.findAllByIdIn(getAllOnlineUserIds(project));
+        return userRepository.findAllByIdIn(getAllOnlineUserIds(project));
     }
 
     /**
      * Get all user that share at least a same project as user from argument
      */
-    public List<SecUser> getAllFriendsUsers(SecUser user) {
+    public List<User> getAllFriendsUsers(User user) {
         securityACLService.checkIsSameUser(user, currentUserService.getCurrentUser());
-        return secUserRepository.findAllSecUsersSharingAccesToSameProject(user.getUsername());
+        return userRepository.findAllUsersSharingAccessToSameProject(user.getUsername());
     }
 
     /**
      * Get all online user that share at least a same project as user from argument
      */
-    public List<SecUser> getAllFriendsUsersOnline(SecUser user) {
+    public List<User> getAllFriendsUsersOnline(User user) {
         securityACLService.checkIsSameUser(user, currentUserService.getCurrentUser());
-        List<SecUser> friends = getAllFriendsUsers(user);
-        List<SecUser> friendsOnline = getAllOnlineUsers().stream()
+        List<User> friends = getAllFriendsUsers(user);
+        List<User> friendsOnline = getAllOnlineUsers().stream()
                 .distinct()
                 .filter(friends::contains)
                 .collect(Collectors.toList());
@@ -834,16 +750,15 @@ public class SecUserService extends ModelService {
     /**
      * Get all user that share at least a same project as user from argument and
      */
-    public List<SecUser> getAllFriendsUsersOnline(SecUser user, Project project) {
+    public List<User> getAllFriendsUsersOnline(User user, Project project) {
         securityACLService.check(project, READ);
         //no need to make insterect because getAllOnlineUsers(project) contains only friends users
         return getAllOnlineUsers(project);
     }
 
-
-    public Optional<UserJob> findByJobId(Long job) {
-        // TODO:
-        throw new CytomineMethodNotYetImplementedException("not yet implemented");
+    public User regenerateKeys(User user) {
+        user.generateKeys();
+        return userRepository.save(user);
     }
 
 
@@ -853,9 +768,10 @@ public class SecUserService extends ModelService {
      * @param json New domain data
      * @return Response structure (created domain data,..)
      */
+    // TODO IAM: refactor. ADMIN ROLE can create IAM account (and create the underlying Cytomine user to the cache)
     public CommandResponse add(JsonObject json) {
         synchronized (this.getClass()) {
-            SecUser currentUser = currentUserService.getCurrentUser();
+            User currentUser = currentUserService.getCurrentUser();
             securityACLService.checkUser(currentUser);
             if (!json.containsKey("user")) {
                 json.put("user", currentUser.getId());
@@ -863,10 +779,6 @@ public class SecUserService extends ModelService {
             }
             CommandResponse response = executeCommand(new AddCommand(currentUser), null, json);
 
-            User user = (User)response.getObject();
-            user.setPassword(json.getJSONAttrStr("password", true));
-            user.encodePassword(passwordEncoder);
-            user.setNewPassword(null);
             return response;
         }
     }
@@ -878,12 +790,10 @@ public class SecUserService extends ModelService {
      * @param jsonNewData New domain datas
      * @return Response structure (new domain data, old domain data..)
      */
+    // TODO IAM: refactor. ADMIN ROLE can update an IAM account (and update the underlying Cytomine user to the cache)
     public CommandResponse update(CytomineDomain domain, JsonObject jsonNewData, Transaction transaction) {
-        SecUser currentUser = currentUserService.getCurrentUser();
-        securityACLService.checkIsCreator((SecUser) domain, currentUser);
-        if (!jsonNewData.isMissing("password")) {
-            changeUserPassword((User)domain, jsonNewData.getJSONAttrStr("password"));
-        }
+        User currentUser = currentUserService.getCurrentUser();
+        securityACLService.checkIsCreator((User) domain, currentUser);
         return executeCommand(new EditCommand(currentUser, null), domain, jsonNewData);
     }
 
@@ -896,21 +806,18 @@ public class SecUserService extends ModelService {
      * @param printMessage Flag if client will print or not confirm message
      * @return Response structure (code, old domain,..)
      */
+    // TODO IAM: refactor. ADMIN ROLE can delete IAM account (and delete the underlying Cytomine user from the cache)
     public CommandResponse delete(CytomineDomain domain, Transaction transaction, Task task, boolean printMessage) {
-        SecUser currentUser = currentUserService.getCurrentUser();
-        if (((SecUser) domain).isAlgo()) {
-            throw new CytomineMethodNotYetImplementedException("software package not yet implemented");
-        } else {
-            securityACLService.checkAdmin(currentUser);
-            securityACLService.checkIsSameUser((User) domain, currentUser);
-        }
+        User currentUser = currentUserService.getCurrentUser();
+        securityACLService.checkAdmin(currentUser);
+        securityACLService.checkIsSameUser((User) domain, currentUser);
         Command c = new DeleteCommand(currentUser, transaction);
         return executeCommand(c, domain, null);
     }
 
     @Override
     public Class currentDomain() {
-        return SecUser.class;
+        return User.class;
     }
 
     @Override
@@ -920,33 +827,20 @@ public class SecUserService extends ModelService {
 
     @Override
     public List<String> getStringParamsI18n(CytomineDomain domain) {
-        SecUser secUser = (SecUser) domain;
-        return Arrays.asList(String.valueOf(secUser.getId()), secUser.getUsername());
+        User user = (User) domain;
+        return Arrays.asList(String.valueOf(user.getId()), user.getUsername());
     }
 
+    // TODO IAM: refactor: the unique constraint must be on IAM reference
     public void checkDoNotAlreadyExist(CytomineDomain domain) {
-        SecUser user = (SecUser) domain;
+        User user = (User) domain;
         if (user.getUsername()==null) {
             throw new WrongArgumentException("Username is not set");
         }
-        Optional<SecUser> userWithSameUsername = secUserRepository.findByUsernameLikeIgnoreCase(user.getUsername());
+        Optional<User> userWithSameUsername = userRepository.findByUsernameLikeIgnoreCase(user.getUsername());
         if (userWithSameUsername.isPresent() && !Objects.equals(userWithSameUsername.get().getId(), user.getId())) {
             throw new AlreadyExistException("User " + user.getUsername() + " already exist!");
         }
-    }
-
-    public void changeUserPassword(User user, String newPassword) {
-        securityACLService.checkIsCreator(user,currentUserService.getCurrentUser());
-        user.setPassword(newPassword);
-        user.encodePassword(passwordEncoder);
-        user.setPasswordExpired(false);
-        user.setNewPassword(null);
-        this.saveDomain(user);
-    }
-
-    public boolean isUserPassword(User user, String password) {
-        securityACLService.checkIsSameUser(user, currentUserService.getCurrentUser());
-        return passwordEncoder.matches(password, user.getPassword());
     }
 
 
@@ -958,7 +852,7 @@ public class SecUserService extends ModelService {
      * @param admin   Flaf if user will become a simple user or a project manager
      * @return Response structure
      */
-    public void addUserToProject(SecUser user, Project project, boolean admin) {
+    public void addUserToProject(User user, Project project, boolean admin) {
         securityACLService.check(project, ADMINISTRATION);
         log.info("service.addUserToProject");
         if (project != null) {
@@ -987,7 +881,7 @@ public class SecUserService extends ModelService {
      * @param admin   Flaf if user will become a simple user or a project manager
      * @return Response structure
      */
-    public void deleteUserFromProject(SecUser user, Project project, boolean admin) {
+    public void deleteUserFromProject(User user, Project project, boolean admin) {
         if (!Objects.equals(currentUserService.getCurrentUser().getId(), user.getId())) {
             securityACLService.check(project, ADMINISTRATION);
         }
@@ -1040,8 +934,8 @@ public class SecUserService extends ModelService {
             permissionService.deletePermission(project.getOntology(), user.getUsername(), READ);
             permissionService.deletePermission(project.getOntology(), user.getUsername(), ADMINISTRATION);
         } else if (admin) {
-            List<Long> managedProjectList = projectService.listByAdmin(user).stream().map(NamedCytomineDomain::getId).collect(Collectors.toList());
-            List<Long> otherProjectsIds = otherProjects.stream().map(CytomineDomain::getId).collect(Collectors.toList());
+            List<Long> managedProjectList = projectService.listByAdmin(user).stream().map(NamedCytomineDomain::getId).toList();
+            List<Long> otherProjectsIds = otherProjects.stream().map(CytomineDomain::getId).toList();
             if (managedProjectList.stream().noneMatch(otherProjectsIds::contains)) {
                 permissionService.deletePermission(project.getOntology(), user.getUsername(), ADMINISTRATION);
             }
@@ -1050,14 +944,14 @@ public class SecUserService extends ModelService {
     }
 
 
-    public void addUserToStorage(SecUser user, Storage storage) {
+    public void addUserToStorage(User user, Storage storage) {
         securityACLService.check(storage, ADMINISTRATION);
         log.info("Add user {} to storage {}", user, storage);
         permissionService.addPermission(storage, user.getUsername(), READ);
         permissionService.addPermission(storage, user.getUsername(), WRITE);
     }
 
-    public void deleteUserFromStorage(SecUser user, Storage storage) {
+    public void deleteUserFromStorage(User user, Storage storage) {
         securityACLService.checkIsSameUserOrAdminContainer(storage, user, currentUserService.getCurrentUser());
 
         if (user == storage.getUser()) {
@@ -1080,62 +974,49 @@ public class SecUserService extends ModelService {
 
 
     protected void afterAdd(CytomineDomain domain, CommandResponse response) {
-        SecUserSecRole secUserSecRole = new SecUserSecRole();
-        secUserSecRole.setSecUser((SecUser) domain);
-        secUserSecRole.setSecRole(secRoleRepository.getUser());
+        User user = (User) domain;
+        if (user.getPublicKey() == null || user.getPrivateKey() == null) {
+            user.generateKeys();
+            userRepository.save(user);
+        }
+        SecUserSecRole secSecUserSecRole = new SecUserSecRole();
+        secSecUserSecRole.setSecUser(user);
+        secSecUserSecRole.setSecRole(secRoleRepository.getUser());
 
-        if (secUserSecRoleRepository.findBySecUserAndSecRole(secUserSecRole.getSecUser(), secUserSecRole.getSecRole()).isEmpty()) {
-            secUserSecRoleRepository.save(secUserSecRole);
+        if (secSecUserSecRoleRepository.findBySecUserAndSecRole(secSecUserSecRole.getSecUser(), secSecUserSecRole.getSecRole()).isEmpty()) {
+            secSecUserSecRoleRepository.save(secSecUserSecRole);
         }
 
-        if (domain instanceof User) {
-            storageService.initUserStorage((SecUser) domain);
-        }
+        storageService.initUserStorage((User) domain);
     }
 
     @Override
     public CytomineDomain retrieve(JsonObject json) {
-        return secUserRepository.findById(json.getJSONAttrLong("id"))
-                .orElseThrow(() -> new ObjectNotFoundException("SecUser", json.toJsonString()));
+        return userRepository.findById(json.getJSONAttrLong("id"))
+                .orElseThrow(() -> new ObjectNotFoundException("User", json.toJsonString()));
     }
 
 
     public void deleteDependencies(CytomineDomain domain, Transaction transaction, Task task) {
-        deleteDependentAlgoAnnotation((SecUser) domain, transaction, task);
-        deleteDependentAlgoAnnotationTerm((SecUser) domain, transaction, task);
-        deleteDependentAnnotationTerm((SecUser) domain, transaction, task);
-        deleteDependentImageInstance((SecUser) domain, transaction, task);
-        deleteDependentOntology((SecUser) domain, transaction, task);
-        deleteDependentReviewedAnnotation((SecUser) domain, transaction, task);
-        deleteDependentSecUserSecRole((SecUser) domain, transaction, task);
-        deleteDependentAbstractImage((SecUser) domain, transaction, task);
-        deleteDependentUserAnnotation((SecUser) domain, transaction, task);
-        deleteDependentUploadedFile((SecUser) domain, transaction, task);
-        deleteDependentStorage((SecUser) domain, transaction, task);
-        deleteDependentAnnotationIndex((SecUser) domain, transaction, task);
-        deleteDependentNestedImageInstance((SecUser) domain, transaction, task);
-        deleteDependentProjectDefaultLayer((SecUser) domain, transaction, task);
-        deleteDependentProjectRepresentativeUser((SecUser) domain, transaction, task);
-        deleteDependentMessageBrokerServer((SecUser) domain, transaction, task);
+        deleteDependentAnnotationTerm((User) domain, transaction, task);
+        deleteDependentImageInstance((User) domain, transaction, task);
+        deleteDependentOntology((User) domain, transaction, task);
+        deleteDependentReviewedAnnotation((User) domain, transaction, task);
+        deleteDependentSecUserSecRole((User) domain, transaction, task);
+        deleteDependentAbstractImage((User) domain, transaction, task);
+        deleteDependentUserAnnotation((User) domain, transaction, task);
+        deleteDependentUploadedFile((User) domain, transaction, task);
+        deleteDependentStorage((User) domain, transaction, task);
+        //deleteDependentSharedAnnotation((User) domain, transaction, task);
+        //deleteDependentHasManySharedAnnotation((User) domain, transaction, task);
+        deleteDependentAnnotationIndex((User) domain, transaction, task);
+        deleteDependentNestedImageInstance((User) domain, transaction, task);
+        deleteDependentProjectDefaultLayer((User) domain, transaction, task);
+        deleteDependentProjectRepresentativeUser((User) domain, transaction, task);
     }
 
-    public void deleteDependentAlgoAnnotation(SecUser user, Transaction transaction, Task task) {
-        if (user instanceof UserJob) {
-            for (AlgoAnnotation algoAnnotation : algoAnnotationRepository.findAllByUser((UserJob) user)) {
-                algoAnnotationService.delete(algoAnnotation, transaction, task, false);
-            }
-        }
-    }
 
-    public void deleteDependentAlgoAnnotationTerm(SecUser user, Transaction transaction, Task task) {
-        if (user instanceof UserJob) {
-            for (AlgoAnnotationTerm algoAnnotationTerm : algoAnnotationTermRepository.findAllByUserJob((UserJob) user)) {
-                algoAnnotationTermService.delete(algoAnnotationTerm, transaction, task, false);
-            }
-        }
-    }
-
-    public void deleteDependentAnnotationTerm(SecUser user, Transaction transaction, Task task) {
+    public void deleteDependentAnnotationTerm(User user, Transaction transaction, Task task) {
         if (user instanceof User) {
             for (AnnotationTerm annotationTerm : annotationTermRepository.findAllByUser((User) user)) {
                 annotationTermService.delete(annotationTerm, transaction, task, false);
@@ -1143,7 +1024,7 @@ public class SecUserService extends ModelService {
         }
     }
 
-    public void deleteDependentImageInstance(SecUser user, Transaction transaction, Task task) {
+    public void deleteDependentImageInstance(User user, Transaction transaction, Task task) {
         if (user instanceof User) {
             for (ImageInstance imageInstance : imageInstanceRepository.findAllByUser((User) user)) {
                 imageInstanceService.delete(imageInstance, transaction, task, false);
@@ -1151,7 +1032,7 @@ public class SecUserService extends ModelService {
         }
     }
 
-    public void deleteDependentOntology(SecUser user, Transaction transaction, Task task) {
+    public void deleteDependentOntology(User user, Transaction transaction, Task task) {
         if (user instanceof User) {
             for (Ontology ontology : ontologyRepository.findAllByUser((User) user)) {
                 ontologyService.delete(ontology, transaction, task, false);
@@ -1159,15 +1040,7 @@ public class SecUserService extends ModelService {
         }
     }
 
-
-    public void deleteDependentForgotPasswordToken(SecUser secUser, Transaction transaction, Task task) {
-        if (secUser instanceof User) {
-            //TODO
-            throw new CytomineMethodNotYetImplementedException("todo");
-        }
-    }
-
-    public void deleteDependentReviewedAnnotation(SecUser user, Transaction transaction, Task task) {
+    public void deleteDependentReviewedAnnotation(User user, Transaction transaction, Task task) {
         if (user instanceof User) {
             for (ReviewedAnnotation reviewedAnnotation : reviewedAnnotationRepository.findAllByUser((User) user)) {
                 reviewedAnnotationService.delete(reviewedAnnotation, transaction, null, false);
@@ -1175,17 +1048,17 @@ public class SecUserService extends ModelService {
         }
     }
 
-    public void deleteDependentSecUserSecRole(SecUser user, Transaction transaction, Task task) {
-        for (SecUserSecRole secUserSecRole : secUserSecRoleRepository.findAllBySecUser(user)) {
-            secUserSecRoleService.delete(secUserSecRole, transaction, null, false);
+    public void deleteDependentSecUserSecRole(User user, Transaction transaction, Task task) {
+        for (SecUserSecRole secSecUserSecRole : secSecUserSecRoleRepository.findAllBySecUser(user)) {
+            secSecUserSecRoleService.delete(secSecUserSecRole, transaction, null, false);
         }
     }
 
-    public void deleteDependentAbstractImage(SecUser user, Transaction transaction, Task task) {
+    public void deleteDependentAbstractImage(User user, Transaction transaction, Task task) {
         //:to do implemented this ? allow this or not ?
     }
 
-    public void deleteDependentUserAnnotation(SecUser user, Transaction transaction, Task task) {
+    public void deleteDependentUserAnnotation(User user, Transaction transaction, Task task) {
         if (user instanceof User) {
             for (UserAnnotation userAnnotation : userAnnotationRepository.findAllByUser((User) user)) {
                 userAnnotationService.delete(userAnnotation, transaction, null, false);
@@ -1193,21 +1066,13 @@ public class SecUserService extends ModelService {
         }
     }
 
-    public void deleteDependentUserJob(SecUser user, Transaction transaction, Task task) {
-        if (user instanceof User) {
-            throw new CytomineMethodNotYetImplementedException("todo");
-        }
-    }
-
-
-    public void deleteDependentUploadedFile(SecUser user, Transaction transaction, Task task) {
+    public void deleteDependentUploadedFile(User user, Transaction transaction, Task task) {
         if (user instanceof User) {
             uploadedFileRepository.deleteAllByUser((User) user);
         }
     }
 
-
-    public void deleteDependentStorage(SecUser user, Transaction transaction, Task task) {
+    public void deleteDependentStorage(User user, Transaction transaction, Task task) {
         for (Storage storage : storageRepository.findAllByUser(user)) {
             if (uploadedFileRepository.countByStorage(storage) > 0) {
                 throw new ConstraintException("Storage contains data, cannot delete user. Remove or assign storage to an another user first");
@@ -1217,29 +1082,29 @@ public class SecUserService extends ModelService {
         }
     }
 
-    public void deleteDependentSharedAnnotation(SecUser user, Transaction transaction, Task task) {
+    public void deleteDependentSharedAnnotation(User user, Transaction transaction, Task task) {
         if (user instanceof User) {
             //TODO:: implement cascade deleteting/update for shared annotation
             throw new CytomineMethodNotYetImplementedException("todo");
         }
     }
 
-    public void deleteDependentHasManySharedAnnotation(SecUser user, Transaction transaction, Task task) {
+    public void deleteDependentHasManySharedAnnotation(User user, Transaction transaction, Task task) {
         if (user instanceof User) {
             //TODO:: implement cascade deleteting/update for shared annotation
             throw new CytomineMethodNotYetImplementedException("todo");
         }
     }
 
-    public void deleteDependentAnnotationIndex(SecUser user, Transaction transaction, Task task) {
+    public void deleteDependentAnnotationIndex(User user, Transaction transaction, Task task) {
         annotationIndexRepository.deleteAllByUser(user);
     }
 
-    public void deleteDependentNestedImageInstance(SecUser user, Transaction transaction, Task task) {
+    public void deleteDependentNestedImageInstance(User user, Transaction transaction, Task task) {
         nestedImageInstanceRepository.deleteAllByUser((User) user);
     }
 
-    public void deleteDependentProjectDefaultLayer(SecUser user, Transaction transaction, Task task) {
+    public void deleteDependentProjectDefaultLayer(User user, Transaction transaction, Task task) {
         if (user instanceof User) {
             for (ProjectDefaultLayer projectDefaultLayer : projectDefaultLayerRepository.findAllByUser(user)) {
                 projectDefaultLayerService.delete(projectDefaultLayer, transaction, null, false);
@@ -1247,15 +1112,11 @@ public class SecUserService extends ModelService {
         }
     }
 
-    public void deleteDependentProjectRepresentativeUser(SecUser user, Transaction transaction, Task task) {
+    public void deleteDependentProjectRepresentativeUser(User user, Transaction transaction, Task task) {
         if (user instanceof User) {
             for (ProjectRepresentativeUser projectRepresentativeUser : projectRepresentativeUserRepository.findAllByUser(user)) {
                 projectRepresentativeUserService.delete(projectRepresentativeUser, transaction, null, false);
             }
         }
-    }
-
-    public void deleteDependentMessageBrokerServer(SecUser user, Transaction transaction, Task task) {
-
     }
 }
